--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
-!DOCTYPE html>
-<html>
-	<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<title>William Harris Solomon</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Technology</a></li>
-	        	<li><a href="/about">Data</a></li>
-        		<li><a href="/cv">Design</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Will!</h1>
-				<p>Drop by drop, a river is formed!<em>Guitar, climibing, baords!</em>  <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:littlejewishsboy01@yahoo.com">email</a></li>
-        		<li><a href="https://github.com/whs2k">github.com/whs2k</a></li>
-			</ul>
-		</footer>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Hello</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>Search /twitter or /reddit in the Bar Above</h2>  
+  <h3>that's all we got rn</h3>
+</div>
+
+</body>
 </html>
-4
