Testing First Proj Link

--- a/index.html
+++ b/index.html
@@ -11,9 +11,40 @@
 <body>
 
 <div class="container">
-  <h2>Search /twitter or /reddit in the Bar Above</h2>  
-  <h3>that's all we got rn</h3>
+  <h2>Hi and welcome back to my cv site</h2>  
+  <h5>If you're new here; welcome!</h5>
+  <h5>I'm Will and I enjoy technology, data, and design</h5>
 </div>
+
+<br><br>
+
+<div class="container">
+  <h3>Projects</h3>  
+  <h4><a href="/templates/0.1.0-whs-newsInSlowFrench.html">Alexa App: News in slow french</a>></h4>
+  <h4>Link 2</h4>
+</div>
+<br>
+
+<div class="container">
+  <h3>Experience</h3>  
+  <h4>Link 1</h4>
+  <h4>Link 2</h4>
+</div>
+<br>
+
+<div class="container">
+  <h3>Publications</h3>  
+  <h4>Link 1</h4>
+  <h4>Link 2</h4>
+</div>
+<br>
+
+<div class="container">
+  <h3>Other Intersting Things</h3>  
+  <h4>Link 1</h4>
+  <h4>Link 2</h4>
+</div>
+<br>
 
 </body>
 </html>
