--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="container">
   <h3>Projects</h3>  
-  <h4><a href="/cv/templates/0.1.0-whs-newsInSlowFrench.html">Alexa App: News in slow french</a>></h4>
+  <h4><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h4>
   <h4>Link 2</h4>
 </div>
 <br>
