--- a/index.html
+++ b/index.html
@@ -11,33 +11,48 @@
 <body>
 
 <div class="container">
-  <h2>Hi and welcome back to my cv site</h2>  
-  <h5>If you're new here; welcome!</h5>
-  <h5>I'm Will and I enjoy technology, data, and design</h5>
+	<div class="jumbotron">
+  		<h2>Hi and welcome back to my cv site</h2>  
+  		<h5>If you're new here; welcome!</h5>
+  		<h5>I'm Will and I enjoy technology, data, and design</h5>
+  	</div>
 </div>
 
 <br><br>
 
 <div class="container">
-  <h3>Projects</h3>  
-  <h4><a href="/templates/0.1.0-whs-newsInSlowFrench.html">Alexa App: News in slow french</a>></h4>
+  <h3>
+  	<span class="glyphicon glyphicon-briefcase"></span>
+  </h3>  
+  	<hr class="style8">
   <h4>Link 2</h4>
 </div>
 <br>
 
 <div class="container">
-  <h3>Experience</h3>  
+  <h3><span class="glyphicon glyphicon-home"></span></h3>  
+    <hr class="style8">
+  <h4><a href="/cv/templates/0.1.0-whs-newsInSlowFrench.html">Alexa App: News in slow french</a></h4>
   <h4>Link 1</h4>
   <h4>Link 2</h4>
 </div>
 <br>
 
 <div class="container">
-  <h3>Publications</h3>  
-  <h4>Link 1</h4>
-  <h4>Link 2</h4>
+  <h3><span class="glyphicon glyphicon-education"></span></h3>  
+  <hr class="style8">
+
+  <h4><small>2015 - 2017</small> Masters of Business Administration</h4>
+  <h5 class="text-muted"></code> The Johns Hopkins University</h5>
+  <br>
+  <h4><small>2015 - 2017 </small>Masters of Design Leadership</h4>
+  <h5 class="text-muted"></code> Maryland Institute College of Art</h5>
+  <br>
+  <h4><small>2005 - 2009 </small> Bachelor of Science: Mechanical Engineering</h4>
+  <h5 class="text-muted"></code> The University of Virginia</h5>
 </div>
 <br>
+
 
 <div class="container">
   <h3>Other Intersting Things</h3>  
