--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Hello</title>
@@ -37,7 +37,7 @@
 <div class="container">
   <h3><span class="glyphicon glyphicon-home"></span></h3>  
     <hr class="style8">
-  <h4><a href="/cv/templates/0.1.0-whs-newsInSlowFrench.html">Alexa App: News in slow french</a></h4>
+  <h4><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h4>
   <h4>Link 1</h4>
   <h4>Link 2</h4>
 </div>
