--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@ f<!DOCTYPE html>
 <br><br>
 
 <div class="container">
-<<<<<<< HEAD
   <h3>
   	<span class="glyphicon glyphicon-briefcase"></span>
   </h3>  
   	<hr class="style8">
-=======
   <h3>Projects</h3>  
   <h4><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h4>
->>>>>>> 72be1c073b8ca5463dd9456196ed74107d45098e
-  <h4>Link 2</h4>
+  <h3>stockfries.com</h3>
+  <h4><a>http://stockfries.com/</a></h4>
+  <h3>dogifai.com</h3>
+  <h4><a>http://www.dogifai.com/</a></h4>
 </div>
 <br>
 
