--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ f<!DOCTYPE html>
   </h3>  
   	<hr class="style8">
   <h3>Projects</h3>  
-  <h4><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h4>
+  <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h5>
   <h3>stockfries.com</h3>
-  <h4><a>http://stockfries.com/</a></h4>
+  <h5 class="text-muted"><a>http://stockfries.com/</a></h5>
   <h3>dogifai.com</h3>
-  <h4><a>http://www.dogifai.com/</a></h4>
+  <h5 class="text-muted"><a>http://www.dogifai.com/</a></h5>>
 </div>
 <br>
 
