--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ f<!DOCTYPE html>
   	<hr class="style8">
   <h3>Projects</h3>  
   <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h5>
-  <h3>stockfries.com</h3>
+  <h4><small>stockfries.com</small></h3>
   <h5 class="text-muted"><a>http://stockfries.com/</a></h5>
   <h3>dogifai.com</h3>
   <h5 class="text-muted"><a>http://www.dogifai.com/</a></h5>>
