--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@ f<!DOCTYPE html>
 
 <div class="container">
   <h3>
-  	<span class="glyphicon glyphicon-briefcase"></span>
+  	<span class="glyphicon glyphicon-briefcase"></span> <h3>Projects</h3>  
   </h3>  
   	<hr class="style8">
-  <h3>Projects</h3>  
   <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h5>
   <h4><small>stockfries.com</small></h3>
   <h5 class="text-muted"><a>http://stockfries.com/</a></h5>
