--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@ f<!DOCTYPE html>
 <br><br>
 
 <div class="container">
-  <h3><h3>Projects</h3> 
-  	<span class="glyphicon glyphicon-briefcase"></span>  
-  </h3>  
+  	<span class="glyphicon glyphicon-briefcase"></span> <h3>Projects</h3>  
   	<hr class="style8">
   <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h5>
   <h4><small>stockfries.com</small></h3>
