--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ f<!DOCTYPE html>
   <h4><small>stockfries.com</small></h3>
   <h5 class="text-muted"><a>http://stockfries.com/</a></h5>
   <br>
-  <h4>dogifai.com</h4>
+  <h4><small>dogifai.com</small></h4>
   <h5 class="text-muted"><a>http://www.dogifai.com/</a></h5>>
 </div>
 <br>
