--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Hello</title>
@@ -25,20 +25,22 @@ f<!DOCTYPE html>
   	<span class="glyphicon glyphicon-briefcase"></span> 
   </h3>  
   	<hr class="style8">
-  <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h5>
+  	<h4><small>News in slow french Alexa App</small>
+  <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">https://github.com/whs2k/AlexaFrenchNews"</a></h5>
   <br>
   <h4><small>stockfries.com</small></h3>
-  <h5 class="text-muted"><a>http://stockfries.com/</a></h5>
+  <h5 class="text-muted"><a href="http://stockfries.com">http://www.stockfries.com/</a></h5>
   <br>
   <h4><small>dogifai.com</small></h4>
-  <h5 class="text-muted"><a>http://www.dogifai.com/</a></h5>>
+  <h5 class="text-muted"><a href="http://www.dogifai.com">http://www.dogifai.com/</a></h5>>
 </div>
 <br>
 
 <div class="container">
   <h3><span class="glyphicon glyphicon-home"></span></h3>  
     <hr class="style8">
-  <h4><a href="https://github.com/whs2k/AlexaFrenchNews">Alexa App: News in slow french</a></h4>
+    <h4><small>Medium</small></h4>
+  <h5 class="text-muted"><a href="https://medium.com/@willsolomon/query-aws-redshift-w-python-41380ab06bd">medium.com/@willsolomon/</a></h5>
   <h4>Link 1</h4>
   <h4>Link 2</h4>
 </div>
