--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </head>
 <body>
 
 <div class="container">
@@ -19,6 +21,17 @@
 </div>
 
 <br><br>
+
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Alexa App: News in slow french</h5>
+    <p class="card-text">An Alexa Skill to play the daily news in French for language learning. Say "Alexa, play slow french news!"</p>
+    <a href="https://github.com/whs2k/AlexaFrenchNews" class="btn btn-primary">Github Code</a>
+  </div>
+</div>
+
 
 <div class="container">
   <h3>
