Adding erro tracing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br><br>
 
 
-<div class="card" style="width: 18rem;">
+<div class="card" <!-- style="width: 18rem;" --> >
   <img class="card-img-top" src="..." alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Alexa App: News in slow french</h5>
@@ -38,7 +38,7 @@
   	<span class="glyphicon glyphicon-briefcase"></span> 
   </h3>  
   	<hr class="style8">
-  	<h4><small>News in slow french Alexa App</small>
+  	<h4><small>TESTING News in slow french Alexa App</small>
   <h5 class="text-muted"><a href="https://github.com/whs2k/AlexaFrenchNews">https://github.com/whs2k/AlexaFrenchNews"</a></h5>
   <br>
   <h4><small>stockfries.com</small></h3>
