--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <style>
   p {font-size: smaller;}
   a {font-size: smaller;}
+  img {width: 100%; height: 15vw; object-fit: cover;}
   </style>
   </head>
 <body>
@@ -57,8 +58,8 @@
 <!-- <div class="col"> -->
 
 
-      <div class="card h-100 example " style="width: 18rem; height:18rem;">
-        <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="static/stockfries_logo_dark.png" alt="Card image cap">
+      <div class="card h-100 example " style="width: 14rem; height:14rem;">
+        <img class="card-img-top"  src="static/stockfries_logo_dark.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">stockfries.com</h5>
           <p class="card-text">We pull quarterly Hedgefund 13-F filings from the <a href='https://www.sec.gov/edgar/searchedgar/companysearch.html'> SEC;</a> connecting you with the world's most expensive tips</p>
@@ -71,7 +72,7 @@
         </div>
       </div>
 
-      <div class="card h-100 z-depth-2" style="width: 18rem; height:18rem; ">
+      <div class="card h-100 z-depth-2" style="width: 14rem; height:14rem; ">
         <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="static/Alexa-French.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Alexa: Slow French News</h5>
@@ -84,7 +85,7 @@
         </div>
       </div>
 
-      <div class="card h-100" style="width: 18rem; height:18rem;">
+      <div class="card h-100" style="width: 14rem; height:14rem;">
         <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="static/dogifai_test.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">dogifai.com</h5>
