--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <style>
   p {font-size: smaller;}
   a {font-size: smaller;}
-  img {width: 100%; height: 15vw; object-fit: cover;}
+  img {width: 100%; height: 15vw; object-fit: cover; max-height: 10rem;}
   </style>
   </head>
 <body>
@@ -67,21 +67,21 @@
 
         </div>
         <div class="card-footer bg-transparent">          
-          <a href="http://stockfries.com/" class="btn btn-primary">site</a>
-          <a href="https://github.com/whs2k/stockFries" class="btn btn-primary">Code</a>
+          <a href="http://stockfries.com/" class="btn btn-primary btn-sm">site</a>
+          <a href="https://github.com/whs2k/stockFries" class="btn btn-primary btn-sm">Code</a>
         </div>
       </div>
 
       <div class="card h-100 z-depth-2" style="width: 12rem; height:12rem; ">
         <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="static/Alexa-French.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Alexa: Slow French News</h5>
-          <p class="card-text">An Alexa Skill to play the daily news in French for language learning. Say "Alexa, play slow french news!"</p>
+          <h5 class="card-title">French Alexa</h5>
+          <p class="card-text">An Alexa Skill to play the daily News in Slow French for language learning. Say "Alexa, play slow french news!"</p>
           
           
         </div>
         <div class="card-footer bg-transparent">          
-          <a href="https://github.com/whs2k/AlexaFrenchNews" class="btn btn-primary">Code</a>
+          <a href="https://github.com/whs2k/AlexaFrenchNews" class="btn btn-primary btn-sm">Code</a>
         </div>
       </div>
 
@@ -89,11 +89,13 @@
         <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="static/dogifai_test.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">dogifai.com</h5>
-          <p class="card-text">Inspired by Google's <a href="https://artsandculture.google.com/camera/selfie">art selfie</a>, Dogifai uses DenseNet CV to determine which Dog you look like!</p>
+          <p class="card-text">Inspired by Google's <a href="https://artsandculture.google.com/camera/selfie">art selfie</a>, Dogifai uses DenseNet CV to determine which dog you look like!
+            <br /> <br /> 
+          </p>
         </div>
         <div class="card-footer bg-transparent">          
-          <a href="http://dogifai.com/" class="btn btn-primary">site</a>
-          <a href="https://github.com/whs2k/ImageSimilarity" class="btn btn-primary">code</a>
+          <a href="http://dogifai.com/" class="btn btn-primary btn-sm">site</a>
+          <a href="https://github.com/whs2k/ImageSimilarity" class="btn btn-primary btn-sm">code</a>
         </div>
       </div>
 
