Adding lighter titles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <br><br>
   <div class="container" >
 
-  <h5>Work Experience - <a href="static/Solomon_VOX-Resume_ver.4.9JUL2021.pdf">Resume</a></h5>
+  <h5 lass="fw-light">Work Experience - <a href="static/Solomon_VOX-Resume_ver.4.9JUL2021.pdf">Resume</a></h5>
   <hr>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="card g-4" style="width: 50%; max-width: 25%; min-width: 12rem;">
