--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <br><br>
   <div class="container" >
 
-  <h5 class="fw-light">Work Experience - <a href="static/Solomon_HumanNode-Resume_ver.4.10DEC2021.pdf">Resume</a></h5>
+  <h5 class="fw-light">Work Experience - <a href="static/Solomon_HumanNode-Resume_ver.4.10DEC2021.pdf">Resume</a> - <a href="https://www.linkedin.com/in/whs2k/">LinkedIn</a></h5>
   <hr>
   <div class="row row-cols-1 row-cols-md-3 g-10">
     <div class="card g-4 mt-4" style="max-width: 25%; min-width: 12rem;">
