--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <br><br>
   <div class="container" >
 
-  <h5 class="fw-light">Work Experience: <a href="static/Solomon_CityOfSeattle-Resume_ver.5.1_APR2024.pdf">Resume</a> - <a href="https://www.linkedin.com/in/whs2k/">LinkedIn</a></h5>
+  <h5 class="fw-light">Work Experience: <a href="static/Solomon_USDS-Resume_ver.5.2_AUG2024.pdf">Resume</a> - <a href="https://www.linkedin.com/in/whs2k/">LinkedIn</a></h5>
   <h5 class="fw-light">Personal: <a href="https://stackoverflow.com/users/8075015/whs2k">Stackoverflow</a> - <a href="https://www.instagram.com/whs2k/?hl=en">Instagram</a> - <a href="whs2k">Twitter</a></h5>
   <hr>
   <div class="row row-cols-1 row-cols-md-3 g-10">
